# SmartEnergyFL

./: report.doc  setup_certificates.sh
certificates/: ca.crt  ca.key  client-1.crt  client-1.csr  client-1.key  client-1.pem  client-2.crt  client-2.csr  client-2.key  client-2.pem  server.crt  server.csr  server.key  server.pem
client/: Dockerfile  client_app.py  compose.yml  requirements.txt  test.py
client/data/: train_processed.feather  train_processed_2.feather  train_processed_200.feather  train_processed_225.feather
flower_learning_resources/App/: client_app.py  pyproject.toml  server_app.py  task.py
flower_learning_resources/distributed_TLS/: .env
flower_learning_resources/distributed_TLS/certificates/: ca.crt  ca.key  ca.srl  server.crt  server.csr  server.key  server.pem
flower_learning_resources/distributed_TLS/client/: compose.yml  pyproject.toml
flower_learning_resources/distributed_TLS/server/: compose.yml  pyproject.toml
flower_learning_resources/distributed_TLS/server/state/: state.db
monitoring/: grafana.ini  prometheus.yml
monitoring/provisioning/dashboards/: dashboard_index.json  dashboards.yml
server/: Dockerfile  docker-compose.yml  requirements.txt  server_app.py
server/strategy/: fed_lightgbm.py
